# goplaywithcarrot.cc

./: .gitignore  Cargo.toml  README.md  nginx_config_for_localhost_subdomains  package-lock.json  package.json  run.sh  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
.github/workflows/: deploy.yml
migrations/: 0001_create_player_table.sql  0002_add_player_id_name.sql  0003_add_four_players.sql  0004_drop_players_and_refill_it.sql
public/: frog.raw  hedgehog.raw  map.raw  rabbit.raw  rabbit2.raw
src/: lib.rs  worker.js  worker.ts
