[package]
name = "aboba"
version = "0.1.0"
edition = "2021"
authors = ["carrotiusha"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ["d1"] }
worker-macros = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
tiny-skia = "0.11"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }

